--- a/Himconsole/Himconsole.vcxproj.filters
+++ b/Himconsole/Himconsole.vcxproj.filters
@@ -63,4 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README_cn.md">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
