--- a/Himconsole/Himconsole.vcxproj.filters
+++ b/Himconsole/Himconsole.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="tcp_server.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="him.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README_cn.md">
