--- a/Himconsole/Himconsole.vcxproj
+++ b/Himconsole/Himconsole.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="him.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.clang-format" />
     <None Include="..\README_cn.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
